--- a/frontend/src/component/instrument/InstrumentPreview.scss
+++ b/frontend/src/component/instrument/InstrumentPreview.scss
@@ -9,16 +9,14 @@
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
   &__image-wrapper {
-    height: 20rem;
-    overflow: hidden;
     background-color: rgb(240, 237, 237);
   }
 
   &__image {
+    display: block;
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: contain;
-    object-position: top;
   }
 
   &__content {
@@ -36,39 +34,21 @@
   }
 
   &__button {
-    margin-top: 0.5rem;
-    padding: 0.5rem 1rem;
-    font-weight: 500;
-    border-radius: 10px;
-    border: 2px solid;
-    transition: all 0.3s ease-in-out;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transform: scale(1);
-  }
-
-  &__button:hover {
-    transform: scale(1.05);
-  }
-
-  &__button--primary {
-    color: #2563eb;
-    border-color: #2563eb;
-  }
-
-  &__button--primary:hover {
-    background-color: #2563eb;
-    color: #ffffff;
+    margin: 1rem 0 0 0;
+    @include button-base(
+      $linear-gradient-purple,
+      $linear-gradient-purple-hover,
+      $shadow-purple
+    );
   }
 
   &__button--secondary {
-    margin-left: 0.5rem;
-    color: #16a34a;
-    border-color: #16a34a;
-  }
-
-  &__button--secondary:hover {
-    background-color: #16a34a;
-    color: #ffffff;
+    margin: 0.5rem 0 0 0;
+    @include button-base(
+      $linear-gradient-red,
+      $linear-gradient-red-hover,
+      $shadow-red
+    );
   }
 }
 
