--- a/frontend/src/pages/AdminManageUser.scss
+++ b/frontend/src/pages/AdminManageUser.scss
@@ -27,9 +27,10 @@
   }
 
   &__title {
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 700;
     margin-bottom: 1rem;
+    text-align: center;
   }
 
   &__aside {
