--- a/frontend/src/pages/HubAdmin.scss
+++ b/frontend/src/pages/HubAdmin.scss
@@ -31,6 +31,7 @@
     gap: 1rem;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 1rem 0  0 0;
   }
 
   &__item {
@@ -38,14 +39,11 @@
   }
 
   &__button {
-    padding: 0.75rem 1.5rem;
-    background-color: #4a90e2;
-    border-radius: 8px;
-    transition: background-color 0.2s ease;
-
-    &:hover {
-      background-color: #357abd;
-    }
+    @include button-base(
+      $linear-gradient-blue,
+      $linear-gradient-blue-hover,
+      $shadow-blue
+    );
   }
 }
 
