--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -58,3 +58,7 @@ $shadow-blue: rgba(37, 117, 252, 0.4);
 $linear-gradient-green: linear-gradient(to right, #a8e063, #56ab2f);
 $linear-gradient-green-hover: linear-gradient(to right, #56ab2f, #a8e063);
 $shadow-green: rgba(86, 171, 47, 0.4);
+
+$linear-gradient-gray: linear-gradient(to right, #d3d3d3, #bdbdbd);
+$linear-gradient-gray-hover: linear-gradient(to right, #bdbdbd, #d3d3d3);
+$shadow-gray: rgba(160, 160, 160, 0.3);
