--- a/frontend/src/component/header/Header.scss
+++ b/frontend/src/component/header/Header.scss
@@ -1,5 +1,5 @@
-@use "../styles/_mixins" as *;
-@use "../styles/_variables" as *;
+@use "../../styles/_mixins" as *;
+@use "../../styles/_variables" as *;
 
 .header {
   padding: 0.7rem 1.5rem;
