--- a/frontend/src/component/instrument/InstrumentDetail.scss
+++ b/frontend/src/component/instrument/InstrumentDetail.scss
@@ -15,13 +15,15 @@
   box-shadow: 0 10px 25px rgba(46, 46, 46, 0.044);
   backdrop-filter: blur(4px);
   z-index: 100;
+  overflow-y: hidden;
+  overflow-x: hidden;
 
   &__container {
     background-color: white;
     width: 100%;
     padding: 1.5rem;
     position: relative;
-    overflow: hidden;
+    overflow-y: auto;
     max-height: 100vh;
   }
 
