--- a/frontend/src/component/user/ConfirmDeleteUserDialog.scss
+++ b/frontend/src/component/user/ConfirmDeleteUserDialog.scss
@@ -1,5 +1,5 @@
-@use "../styles/_mixins" as *;
-@use "../styles/_variables" as *;
+@use "../../styles/_mixins" as *;
+@use "../../styles/_variables" as *;
 
 /***0px***/
 
@@ -20,7 +20,7 @@
     background: white;
     padding: 2rem;
     border-radius: 10px;
-    max-width: 450px;
+    max-width: 550px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     text-align: center;
     animation: fadeInPopup 0.3s ease-in-out;
