--- a/frontend/src/pages/Login.scss
+++ b/frontend/src/pages/Login.scss
@@ -95,12 +95,12 @@
     top: 54%;
     right: 15px;
     cursor: pointer;
-    background-image: url("/media/hide-password.svg");
+    background-image: url("/media/icones/hide-password.svg");
     background-repeat: no-repeat;
     background-position: center;
 
     &.is-visible {
-      background-image: url("/media/show-password.svg");
+      background-image: url("/media/icones/show-password.svg");
     }
   }
 
