--- a/frontend/src/pages/Profil.scss
+++ b/frontend/src/pages/Profil.scss
@@ -217,10 +217,10 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    background-image: url("/media/hide-password.svg");
+    background-image: url("/media/icones/hide-password.svg");
 
     &.is-visible {
-      background-image: url("/media/show-password.svg");
+      background-image: url("/media/icones/show-password.svg");
     }
   }
 
