--- a/frontend/src/pages/admin/EditInstruments.scss
+++ b/frontend/src/pages/admin/EditInstruments.scss
@@ -10,7 +10,7 @@
   transition: all 0.3s ease-in-out;
   border: 2px solid black;
   margin: 1rem 0;
-
+height: fit-content;
   &__title {
     font-size: 1.5rem;
     margin-bottom: 1rem;
@@ -67,6 +67,8 @@
     align-items: center;
     justify-content: space-between;
     padding: 0.5rem 0 0 0;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
 
   &__button {
