--- a/frontend/src/pages/admin/EditUser.scss
+++ b/frontend/src/pages/admin/EditUser.scss
@@ -10,6 +10,7 @@
   transition: all 0.3s ease-in-out;
   border: 2px solid black;
   margin: 1rem 0;
+  height: fit-content;
 
   &__title {
     font-size: 1.5rem;
@@ -68,6 +69,8 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     font-weight: 600;
     transition: background-color 0.3s ease;
+    flex-wrap: wrap;
+    gap: 1rem;
 
     &--submit {
       background-color: #4f46e5;
